# llmforge-production-finetuning

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/deployment/: api.yaml
configs/lora/: cpu-smoke.yaml  default.yaml  qlora.yaml
configs/model/: distilgpt2-cpu-smoke.yaml  llama3-8b.yaml  mistral-7b.yaml
configs/training/: cpu-smoke.yaml  sft.yaml
docker/: Dockerfile.serve  Dockerfile.train
reports/: workflow_validation_report.html  workflow_visualization.py
scripts/: evaluate.py  merge_and_quantize.py  prepare_data.py  serve.py  train.py
src/llmforge/: config.py
src/llmforge/data/: loader.py  preprocessing.py  validation.py
src/llmforge/deployment/: api.py  schemas.py
src/llmforge/evaluation/: benchmark.py  metrics.py  report.py
src/llmforge/inference/: engine.py  merge.py  quantize.py
src/llmforge/tracking/: experiment_tracker.py
src/llmforge/training/: callbacks.py  lora.py  trainer.py
tests/: test_config.py  test_data_validation.py  test_evaluation_metrics.py  test_evaluation_report.py
